Fixed menu issues on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   overflow-y: hidden;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .main-header-left {
@@ -27,11 +27,11 @@ body {
   /* justify-content: space-between; */
   justify-content: flex-start;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .main-header-right {
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .main-header-right img {
@@ -134,7 +134,7 @@ ul.header-menu-list li a {
 
 .header-contents {
   width: 75%;
-  margin: 20% auto 9%;
+  margin: 35% auto 9%;
   text-align: center;
   color: #fff;
   opacity: 0.97;
@@ -1413,7 +1413,7 @@ input[type='radio'].show-bg:checked + label {
 }
 
 .drop-down-menu {
-  display: none;
+  /* display: none; */
   transition: all 0.8s;
   background-color: rgb(0, 0, 0);
   padding-left: 0;
@@ -1955,5 +1955,13 @@ ul.social a:first-child {
 @media (max-width: 768px) {
   .currency {
     margin-left: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .drop-down-menu {
+    position: relative;
+    margin-left: 30px;
+    padding-top: 0px;
   }
 }
